[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treasure-maze"
version = "0.1.0"
description = "Лабиринт сокровищ - текстовая приключенческая игра"
authors = [
    {name = "Dmitry", email = "dmitry@ostanin.email"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
treasure-maze = "main:main"

[tool.setuptools]
py-modules = ["main", "constants", "utils", "player_actions"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "T201", "RUF001", "RUF002", "S311", "PLR2004", "C901", "PLR0912", "BLE001", "EXE001", "FA100", "PLC0415", "B007", "PERF102"]

[tool.ruff.lint.isort]
known-first-party = ["main", "constants", "utils", "player_actions"]
